[package]
name = "stream_resp"
version = "0.1.4"
edition = "2021"
authors = ["HanLin Chai <take3812@gmail.com>"]
description = "StreamRESP is a RESP (Redis Serialization Protocol) parser implemented using a finite state machine (FSM) approach. Designed for streaming scenarios."
license = "MIT"
repository = "https://github.com/daydaydrunk/stream_resp"
documentation = "https://docs.rs/stream_resp/latest/stream_resp/"

[dependencies]
bytes = "1.8.0"
tracing = "0.1"
tracing-subscriber = "0.3"
criterion = "0.5"
atoi = "2.0"

[[bench]]
name = "parser_benchmark"
harness = false

[profile.bench]
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true
panic = "abort"
strip = true

[package.metadata.docs.rs]
all-features = true
