[package]
name = "stream_resp"
version = "0.1.6"
edition = "2024"
authors = ["HanLin Chai <take3812@gmail.com>"]
description = "StreamRESP is a RESP (Redis Serialization Protocol) parser implemented using a finite state machine (FSM) approach. Designed for streaming scenarios."
license = "MIT"
repository = "https://github.com/daydaydrunk/stream_resp"
documentation = "https://docs.rs/stream_resp/latest/stream_resp/"
keywords = ["redis", "resp", "parser", "streaming", "fsm"]
categories = ["parsing", "network-programming", "database-implementations"]

[dependencies]
bytes = "1.9.0"
tracing = "0.1"
tracing-subscriber = "0.3"
atoi = "2.0"
slab = "0.4"
jemallocator = "0.5"
memchr = "2.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_benchmark"
harness = false

[profile.bench]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = "abort"
strip = true

[package.metadata.docs.rs]
all-features = true
