[package]
name = "stream_resp"
version = "1.2.2"
edition = "2024"
authors = ["HanLin Chai <take3812@gmail.com>"]
description = "A fully compliant RESP3 streaming parser"
license = "MIT"
repository = "https://github.com/daydaydrunk/stream_resp"
documentation = "https://docs.rs/stream_resp/latest/stream_resp/"
keywords = ["redis", "resp", "resp3", "parser", "streaming"]
categories = ["parsing", "network-programming", "database-implementations"]
homepage = "https://deepwiki.com/daydaydrunk/stream_resp"

[dependencies]
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
atoi = "2.0"
slab = "0.4"
memchr = "2.5"

[dependencies.jemallocator]
version = "0.5"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
jemalloc = ["jemallocator"]

[[bench]]
name = "parser_benchmark"
harness = false

[profile.bench]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = "abort"
strip = true

[package.metadata.docs.rs]
all-features = true
